--- a/app/src/main/res/layout/fragment_amenities.xml
+++ b/app/src/main/res/layout/fragment_amenities.xml
@@ -573,7 +573,8 @@
                 android:id="@+id/btnNext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/primary_color_btn_selector"
                 android:text="@{userModel.isExecutive() ? @string/next : @string/submit_for_approval}"
                 android:textAllCaps="false"
