--- a/app/src/main/res/layout/fragment_bank_details.xml
+++ b/app/src/main/res/layout/fragment_bank_details.xml
@@ -67,7 +67,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_40sdp"
                     android:layout_marginTop="@dimen/_15sdp"
-                    android:background="@drawable/grey_stroke"
+                    android:background="@drawable/grey_dark_stroke"
                     android:onClick="@{()->spnrBanks.performClick()}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintEnd_toStartOf="parent"
@@ -101,7 +101,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:boxStrokeWidth="0.7dp"
+                    android:theme="@style/TextLabel"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/gst_number"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -124,7 +124,7 @@
                     android:id="@+id/accountnumber"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    app:boxStrokeWidth="0.7dp"
+                    android:theme="@style/TextLabel"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/account_number"
@@ -149,7 +149,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:boxStrokeWidth="0.7dp"
+                    android:theme="@style/TextLabel"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/ifsc_code"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -176,7 +176,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/account_holder_name"
-                    app:boxStrokeWidth="0.7dp"
+                    android:theme="@style/TextLabel"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/IFSCCodeTil">
@@ -198,7 +198,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:boxStrokeWidth="0.7dp"
+                    android:theme="@style/TextLabel"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/pan_number"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -289,7 +289,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:boxStrokeWidth="0.7dp"
+                    android:theme="@style/TextLabel"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/name"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -313,7 +313,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:boxStrokeWidth="0.7dp"
+                    android:theme="@style/TextLabel"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/onboarding_date"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -359,7 +359,7 @@
                     android:id="@+id/saleExecutiveNameTil"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    app:boxStrokeWidth="0.7dp"
+                    android:theme="@style/TextLabel"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/name"
@@ -383,7 +383,7 @@
                     android:id="@+id/phoneNumberTil"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    app:boxStrokeWidth="0.7dp"
+                    android:theme="@style/TextLabel"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/phone_number"
@@ -429,7 +429,7 @@
                     android:id="@+id/areaHeadNameTil"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    app:boxStrokeWidth="0.7dp"
+                    android:theme="@style/TextLabel"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/name"
@@ -453,7 +453,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:boxStrokeWidth="0.7dp"
+                    android:theme="@style/TextLabel"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/phone_number"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -555,7 +555,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
-                    app:boxStrokeWidth="0.7dp"
+                    android:theme="@style/TextLabel"
                     android:hint="@string/choose_months"
                     android:visibility="@{rb30Days.checked ? View.GONE : View.GONE}"
                     app:layout_constraintEnd_toEndOf="parent"
