--- a/app/src/main/res/layout/row_discount_offers_list.xml
+++ b/app/src/main/res/layout/row_discount_offers_list.xml
@@ -53,7 +53,7 @@
                     android:paddingHorizontal="@dimen/_10sdp"
                     android:text="@{data.data}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp"
+                    android:textSize="16sp"
                     app:layout_constraintEnd_toStartOf="@id/iv_edit"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -68,7 +68,7 @@
                     android:paddingHorizontal="@dimen/_10sdp"
                     android:text="@{data.date}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_12ssp"
+                    android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="@id/tv_name"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_name"
@@ -83,7 +83,7 @@
                     android:paddingHorizontal="@dimen/_10sdp"
                     android:text="@string/delete_discount"
                     android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/_12ssp"
+                    android:textSize="14sp"
                     android:visibility="@{isVisible ? View.VISIBLE : View.GONE}"
                     app:layout_constraintEnd_toEndOf="@id/tv_name"
                     app:layout_constraintStart_toStartOf="parent"
