--- a/app/src/main/res/layout/row_state_list.xml
+++ b/app/src/main/res/layout/row_state_list.xml
@@ -48,7 +48,7 @@
             android:orientation="vertical"
             android:text="@{data.name_en}"
             android:textColor="@{data.isChecked() ? context.getColor(R.color.colorPrimary) : context.getColor(R.color.black)}"
-            android:textSize="@dimen/_14ssp"
+            android:textSize="16sp"
             tools:text="@string/city_name" />
 
     </LinearLayout>
