--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,5 +28,6 @@
     <color name="divider_dcdcdc" tools:override="true">#DCDCDC</color>
     <color name="text_privacy_policy" tools:override="true">#A2A2A2</color>
     <color name="text_tab_secondary" tools:override="true">#AAAAAA</color>
-    <color name="text_input" tools:override="true">#636363</color>
+    <color name="text_gray">#636363</color>
+    <color name="color_selected_language">#FFEBEE</color>
 </resources>
