--- a/app/src/main/res/layout/activity_view_dhaba.xml
+++ b/app/src/main/res/layout/activity_view_dhaba.xml
@@ -47,11 +47,12 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/white_round_corners_wide"
                     android:orientation="vertical"
-                    android:padding="@dimen/_10sdp">
+                    android:padding="@dimen/_15sdp">
 
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
                         android:orientation="horizontal">
 
                         <androidx.appcompat.widget.AppCompatTextView
@@ -60,12 +61,13 @@
                             android:fontFamily="@font/opensans_bold"
                             android:text="@{dhabaModelMain.dhabaModel.name}"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="16sp" />
 
                         <TextView
                             android:id="@+id/tvCategory"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_10sdp"
                             android:background="@drawable/ic_gold_hotel_type"
                             android:fontFamily="@font/opensans_regular"
                             android:paddingHorizontal="@dimen/_15sdp"
@@ -73,7 +75,7 @@
                             android:text="@{dhabaModelMain.dhabaModel.dhabaCategory}"
                             android:textAllCaps="true"
                             android:textColor="@color/white"
-                            android:textSize="@dimen/_12ssp"
+                            android:textSize="14sp"
                             android:visibility="@{dhabaModelMain.dhabaModel.dhabaCategory.isEmpty() ? View.GONE : View.VISIBLE}" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
@@ -82,7 +84,8 @@
                         android:id="@+id/recyclerViewImages"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="start" />
+                        android:layout_gravity="start"
+                        android:layout_marginTop="@dimen/_5sdp" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
@@ -91,7 +94,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text="@{dhabaModelMain.dhabaModel.address}"
                         android:textColor="@color/grey"
-                        android:textSize="@dimen/_12ssp" />
+                        android:textSize="14sp" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
@@ -100,7 +103,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text="@string/open_24_x_7"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_12ssp"
+                        android:textSize="14sp"
                         android:visibility="@{dhabaModelMain.dhabaModel.open247 ? View.VISIBLE : View.GONE}" />
 
                     <View
@@ -116,7 +119,7 @@
                         android:fontFamily="@font/opensans_bold"
                         android:text="@string/information"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="@dimen/_12ssp" />
+                        android:textSize="16sp" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
@@ -125,7 +128,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text="@{dhabaModelMain.dhabaModel.address}"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_12ssp"
+                        android:textSize="14sp"
                         android:visibility="@{dhabaModelMain.dhabaModel.address.trim().isEmpty() ? View.GONE : View.VISIBLE}" />
 
                     <androidx.appcompat.widget.AppCompatTextView
@@ -135,7 +138,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text="@{`Landmark : `+ dhabaModelMain.dhabaModel.landmark}"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_12ssp"
+                        android:textSize="14sp"
                         android:visibility="@{dhabaModelMain.dhabaModel.landmark.trim().isEmpty() ? View.GONE : View.VISIBLE}" />
 
                     <androidx.appcompat.widget.AppCompatTextView
@@ -145,7 +148,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text="@{`Area : `+ dhabaModelMain.dhabaModel.area}"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_12ssp"
+                        android:textSize="14sp"
                         android:visibility="@{dhabaModelMain.dhabaModel.area.trim().isEmpty() ? View.GONE : View.VISIBLE}" />
 
                     <androidx.appcompat.widget.AppCompatTextView
@@ -155,7 +158,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text="@{`Highway : `+ dhabaModelMain.dhabaModel.highway}"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_12ssp"
+                        android:textSize="14sp"
                         android:visibility="@{dhabaModelMain.dhabaModel.highway.trim().isEmpty() ? View.GONE : View.VISIBLE}" />
 
                     <View
@@ -172,7 +175,7 @@
                         android:fontFamily="@font/opensans_bold"
                         android:text="@string/amenities"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="@dimen/_12ssp"
+                        android:textSize="16sp"
                         android:visibility="@{dhabaModelMain.foodAmenitiesModel == null &amp;&amp; dhabaModelMain.parkingAmenitiesModel == null  &amp;&amp; dhabaModelMain.sleepingAmenitiesModel == null  &amp;&amp; dhabaModelMain.washroomAmenitiesModel == null  &amp;&amp; dhabaModelMain.securityAmenitiesModel == null  &amp;&amp; dhabaModelMain.lightAmenitiesModel == null  &amp;&amp; dhabaModelMain.otherAmenitiesModel == null ? View.GONE : View.VISIBLE}" />
 
                     <androidx.appcompat.widget.LinearLayoutCompat
@@ -198,7 +201,7 @@
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/food"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="14sp" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -225,7 +228,7 @@
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/parking"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="14sp" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -252,7 +255,7 @@
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/sleeping"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="14sp" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -279,7 +282,7 @@
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/washroom_cleaning"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="14sp" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -306,7 +309,7 @@
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/security"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="14sp" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -333,7 +336,7 @@
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/light"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="14sp" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -360,7 +363,7 @@
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/other"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="14sp" />
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -384,7 +387,7 @@
                             android:fontFamily="@font/opensans_bold"
                             android:text="@string/reviews"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="16sp" />
 
                         <RatingBar
                             android:id="@+id/ratingBar"
