--- a/app/src/main/res/layout/dialog_city_selection.xml
+++ b/app/src/main/res/layout/dialog_city_selection.xml
@@ -41,7 +41,7 @@
                 android:maxLength="15"
                 android:padding="@dimen/_7sdp"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_14ssp" />
+                android:textSize="16sp" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/btnAddNew"
@@ -56,7 +56,7 @@
                 android:text="@string/add_new"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_10ssp"
+                android:textSize="12sp"
                 android:visibility="@{(isCustomHighwayEnabled &amp;&amp; !edSearch.text.toString().trim().empty) ? View.VISIBLE : View.GONE}" />
 
         </FrameLayout>
@@ -65,8 +65,8 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginTop="@dimen/_10sdp" />
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_weight="1" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvNoData"
@@ -91,7 +91,7 @@
             android:text="@string/continue_text"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="@dimen/_14ssp"
+            android:textSize="18sp"
             android:visibility="@{isHavingData ? View.VISIBLE : View.GONE}" />
 
     </LinearLayout>
