--- a/app/src/main/res/layout/dialog_filters.xml
+++ b/app/src/main/res/layout/dialog_filters.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -42,7 +41,7 @@
                     android:fontFamily="@font/opensans_bold"
                     android:text="@string/filters"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_16ssp" />
+                    android:textSize="18sp" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/ivClose"
@@ -58,7 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/grey_stroke"
+                android:background="@drawable/grey_dark_stroke"
                 android:gravity="center"
                 android:onClick="@{() -> tvState.performClick()}"
                 android:orientation="horizontal">
@@ -76,7 +75,7 @@
                     android:paddingVertical="@dimen/_10sdp"
                     android:text="@{filterModel.states}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textSize="16sp" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/ivSpnrState"
@@ -91,7 +90,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/grey_stroke"
+                android:background="@drawable/grey_dark_stroke"
                 android:gravity="center"
                 android:onClick="@{() -> tvCity.performClick()}"
                 android:orientation="horizontal">
@@ -109,7 +108,7 @@
                     android:paddingVertical="@dimen/_10sdp"
                     android:text="@{filterModel.cities}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textSize="16sp" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/ivSpnrCity"
@@ -124,9 +123,9 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:boxStrokeWidth="0.7dp"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:hint="@string/pin_code">
+                android:hint="@string/pin_code"
+                android:theme="@style/TextLabel">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edPinCode"
@@ -137,7 +136,7 @@
                     android:maxLength="6"
                     android:text="@={filterModel.pincode}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp" />
+                    android:textSize="16sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -145,7 +144,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/grey_stroke"
+                android:background="@drawable/grey_dark_stroke"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -162,7 +161,7 @@
                     android:paddingVertical="@dimen/_10sdp"
                     android:text="@{filterModel.highway}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textSize="16sp" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/spnrImgDropdown"
@@ -184,7 +183,7 @@
                 android:text="@string/apply"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_14ssp" />
+                android:textSize="16sp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnReset"
@@ -198,7 +197,7 @@
                 android:text="@string/reset"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_14ssp" />
+                android:textSize="16sp" />
 
         </LinearLayout>
     </FrameLayout>
