--- a/app/src/main/res/layout/dialog_highway_selection.xml
+++ b/app/src/main/res/layout/dialog_highway_selection.xml
@@ -48,7 +48,7 @@
                     android:padding="@dimen/_7sdp"
                     android:text="@string/nh"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp" />
+                    android:textSize="16sp" />
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/edSearch"
@@ -61,7 +61,7 @@
                     android:maxLength="4"
                     android:padding="@dimen/_7sdp"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -77,7 +77,7 @@
                 android:text="@string/add_new"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_10ssp"
+                android:textSize="12sp"
                 android:visibility="@{(isCustomHighwayEnabled &amp;&amp; !edSearch.text.toString().trim().empty) ? View.VISIBLE : View.GONE}" />
 
         </FrameLayout>
@@ -111,7 +111,7 @@
             android:text="@string/continue_text"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="@dimen/_14ssp"
+            android:textSize="18sp"
             android:visibility="@{isHavingData ? View.VISIBLE : View.GONE}" />
 
     </LinearLayout>
