--- a/app/src/main/res/layout/dialog_owner_selection.xml
+++ b/app/src/main/res/layout/dialog_owner_selection.xml
@@ -76,7 +76,7 @@
                 android:maxLength="15"
                 android:padding="@dimen/_7sdp"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_14ssp" />
+                android:textSize="16sp" />
 
             <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                 android:id="@+id/swipeRefreshLayout"
