--- a/app/src/main/res/layout/dialog_request_for_call.xml
+++ b/app/src/main/res/layout/dialog_request_for_call.xml
@@ -46,7 +46,7 @@
                 android:fontFamily="@font/opensans_semibold"
                 android:text="@string/request_for_call"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_18ssp"
+                android:textSize="22sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/profile_image" />
@@ -62,7 +62,7 @@
                 android:gravity="center"
                 android:text="@string/enter_your_phone_number_where_we_can_call_you"
                 android:textColor="@color/grey1"
-                android:textSize="@dimen/_14ssp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/requestCallText" />
@@ -86,7 +86,7 @@
                     android:layout_marginStart="@dimen/_5sdp"
                     app:ccp_hideNameCode="true"
                     app:ccp_defaultCode="91"
-                    app:ccp_textSize="@dimen/_12ssp" />
+                    app:ccp_textSize="16sp" />
 
                 <View
                     android:layout_width="0.5dp"
@@ -98,7 +98,6 @@
                     android:id="@+id/edPhoneNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="@dimen/_2sdp"
                     android:layout_marginStart="@dimen/_4sdp"
                     android:background="@android:color/transparent"
                     android:hint="@string/enter_mobile_number_mandatory"
@@ -107,7 +106,7 @@
                     android:padding="@dimen/_10sdp"
                     android:textColor="@color/black"
                     android:textColorHint="@color/grey"
-                    android:textSize="@dimen/_13ssp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
 
@@ -123,7 +122,7 @@
                 android:text="@string/call_me_now"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_16ssp"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editlayout" />
