--- a/app/src/main/res/layout/fragment_customers.xml
+++ b/app/src/main/res/layout/fragment_customers.xml
@@ -61,7 +61,7 @@
                 android:inputType="text"
                 android:padding="@dimen/_5sdp"
                 android:singleLine="true"
-                android:textSize="@dimen/_12ssp" />
+                android:textSize="16sp" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
@@ -96,7 +96,7 @@
                 android:fontFamily="@font/opensans_regular"
                 android:text="@string/no_customers"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp" />
+                android:textSize="18sp" />
 
         </LinearLayout>
 
