--- a/app/src/main/res/layout/fragment_language_selection.xml
+++ b/app/src/main/res/layout/fragment_language_selection.xml
@@ -30,11 +30,10 @@
 
     </data>
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:gravity="center"
         android:orientation="vertical">
 
         <include layout="@layout/layout_app_logo" />
@@ -49,12 +48,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_80sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
                 android:fontFamily="@font/opensans_regular"
                 android:text="@string/choose_language"
-                android:layout_marginBottom="@dimen/_10sdp"
                 android:textColor="@color/black"
-                android:textSize="26sp" />
+                android:textSize="24sp" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -179,6 +178,6 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
-    </FrameLayout>
+    </LinearLayout>
 
 </layout>
