--- a/app/src/main/res/layout/fragment_notification_settings.xml
+++ b/app/src/main/res/layout/fragment_notification_settings.xml
@@ -17,7 +17,7 @@
         android:fontFamily="@font/opensans_bold"
         android:text="@string/notifications_settings"
         android:textColor="@color/black"
-        android:textSize="@dimen/_16ssp"
+        android:textSize="18sp"
         android:layout_marginTop="@dimen/_15sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
