--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -74,7 +74,7 @@
                 android:fontFamily="@font/opensans_regular"
                 android:text="@string/no_notifications"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp" />
+                android:textSize="18sp" />
 
         </LinearLayout>
 
