--- a/app/src/main/res/layout/fragment_otp_verification.xml
+++ b/app/src/main/res/layout/fragment_otp_verification.xml
@@ -39,23 +39,18 @@
 
         <include layout="@layout/layout_app_logo" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_36sdp"
             android:text="@string/verify"
             android:textColor="@color/black"
-            android:textSize="@dimen/_24ssp" />
+            android:textSize="26sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_10sdp"
+            android:layout_margin="@dimen/_14sdp"
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -64,7 +59,7 @@
                 android:text="@string/enter_otp_sent_to"
                 android:gravity="center"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_12ssp" />
+                android:textSize="14sp" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvOtpSentTo"
@@ -72,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_5sdp"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_12ssp" />
+                android:textSize="14sp" />
         </LinearLayout>
 
         <com.mukesh.OtpView
@@ -85,10 +80,10 @@
             android:itemBackground="@color/white"
             android:textColor="@android:color/black"
             app:OtpItemCount="4"
-            app:OtpItemHeight="@dimen/_40sdp"
+            app:OtpItemHeight="@dimen/_45sdp"
             app:OtpItemRadius="@dimen/_4sdp"
             app:OtpItemSpacing="@dimen/_15sdp"
-            app:OtpItemWidth="@dimen/_40sdp"
+            app:OtpItemWidth="@dimen/_45sdp"
             app:OtpLineColor="@color/grey_otp_box"
             app:OtpLineWidth="@dimen/_1sdp"
             app:OtpViewType="rectangle" />
@@ -100,7 +95,7 @@
             android:layout_marginTop="@dimen/_10sdp"
             android:gravity="center"
             android:text="@{countDownTime}"
-            android:textSize="@dimen/_14ssp"
+            android:textSize="14sp"
             android:textAllCaps="false"
             android:textColor="@color/black" />
 
@@ -114,7 +109,7 @@
             android:text="@string/continue_text"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="@dimen/_16ssp" />
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/btnChangeNumber"
@@ -136,12 +131,7 @@
             android:text="@string/resend_otp"
             android:textAllCaps="false"
             android:textColor="@color/black"
-            android:textSize="@dimen/_16ssp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2" />
+            android:textSize="18sp" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
