--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -12,18 +12,18 @@
             android:id="@+id/settingsText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="15dp"
             android:layout_marginTop="@dimen/_10sdp"
             android:fontFamily="@font/opensans_bold"
             android:text="@string/settings"
-            android:layout_marginHorizontal="15dp"
             android:textColor="@color/black"
-            android:textSize="@dimen/_16ssp" />
+            android:textSize="18sp" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="@dimen/_3sdp"
             android:layout_margin="@dimen/_15sdp"
+            android:elevation="@dimen/_3sdp"
             app:cardBackgroundColor="@color/white">
 
             <LinearLayout
@@ -40,12 +40,12 @@
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:padding="@dimen/_15sdp">
+                    android:padding="@dimen/_12sdp">
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/icon"
-                        android:layout_width="@dimen/_25sdp"
-                        android:layout_height="@dimen/_25sdp"
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
                         android:src="@drawable/ic_account_circle_black_24dp" />
 
 
@@ -77,14 +77,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:padding="@dimen/_15sdp">
+                    android:padding="@dimen/_12sdp">
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/icon1"
-                        android:layout_width="@dimen/_25sdp"
-                        android:layout_height="@dimen/_25sdp"
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
                         android:src="@drawable/ic_language_black_24dp" />
 
                     <LinearLayout
@@ -117,6 +116,7 @@
                     <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
                         android:src="@drawable/ic_arrow_right" />
                 </LinearLayout>
 
@@ -135,12 +135,12 @@
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:padding="@dimen/_15sdp">
+                    android:padding="@dimen/_12sdp">
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/icon3"
-                        android:layout_width="@dimen/_25sdp"
-                        android:layout_height="@dimen/_25sdp"
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
                         android:src="@drawable/ic_logout" />
 
 
