--- a/app/src/main/res/layout/fragment_shops.xml
+++ b/app/src/main/res/layout/fragment_shops.xml
@@ -111,7 +111,7 @@
                     android:inputType="text"
                     android:padding="@dimen/_5sdp"
                     android:singleLine="true"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textSize="16sp" />
 
                 <View
                     android:layout_width="@dimen/_1sdp"
@@ -160,7 +160,7 @@
                 android:gravity="center"
                 android:text="@string/no_shops"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp" />
+                android:textSize="18sp" />
 
         </LinearLayout>
 
