--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -38,15 +38,12 @@
 
         <include layout="@layout/layout_app_logo" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginTop="@dimen/_36sdp"
+            android:layout_marginBottom="@dimen/_20sdp"
             android:fontFamily="@font/opensans_regular"
             android:text="@string/sign_up"
             android:textColor="@color/black"
@@ -65,7 +62,7 @@
                 android:layout_marginHorizontal="@dimen/_15sdp"
                 android:fontFamily="@font/opensans_regular"
                 android:hint="@string/name_"
-                app:boxStrokeWidth="0.7dp">
+                android:theme="@style/TextLabel">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edName"
@@ -111,7 +108,6 @@
                     android:id="@+id/edPhoneNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="@dimen/_2sdp"
                     android:layout_marginStart="@dimen/_4sdp"
                     android:background="@android:color/transparent"
                     android:fontFamily="@font/opensans_regular"
@@ -129,10 +125,10 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:boxStrokeWidth="0.7dp"
                 android:layout_marginHorizontal="@dimen/_15sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:hint="@string/email"
+                android:theme="@style/TextLabel"
                 android:visibility="gone">
 
                 <com.google.android.material.textfield.TextInputEditText
