--- a/app/src/main/res/layout/row_dhaba_list.xml
+++ b/app/src/main/res/layout/row_dhaba_list.xml
@@ -67,7 +67,7 @@
 
                 <ImageView
                     loadImage="@{model.images}"
-                    placeholder="@{R.drawable.ic_image_placeholder}"
+                    placeholder="@{R.drawable.placeholder}"
                     android:layout_width="@dimen/_80sdp"
                     android:layout_height="@dimen/_80sdp"
                     android:scaleType="centerCrop" />
@@ -75,7 +75,6 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:fontFamily="@font/opensans_semibold"
                     android:paddingHorizontal="@dimen/_7sdp"
@@ -119,7 +118,7 @@
                     android:text="@{model.dhabaCategory}"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/_10ssp"
+                    android:textSize="13sp"
                     android:visibility="@{(model.dhabaCategory.isEmpty() || isInProgress)? View.GONE : View.VISIBLE}" />
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -154,7 +153,7 @@
                         android:orientation="vertical"
                         android:text="@{model.city.trim().isEmpty() || model.highway.trim().isEmpty() ? `` : `, `}"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_10ssp" />
+                        android:textSize="13sp" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/tvCity"
@@ -164,7 +163,7 @@
                         android:orientation="vertical"
                         android:text="@{model.city}"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_10ssp" />
+                        android:textSize="13sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -190,7 +189,7 @@
                         android:orientation="vertical"
                         android:text="4.0"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_10ssp" />
+                        android:textSize="13sp" />
 
 
                 </LinearLayout>
