--- a/app/src/main/res/layout/row_highway_list.xml
+++ b/app/src/main/res/layout/row_highway_list.xml
@@ -24,7 +24,7 @@
         android:padding="@dimen/_10sdp"
         android:text="@{highway.highwayNumber}"
         android:textColor="@color/black"
-        android:textSize="@dimen/_14ssp"
+        android:textSize="16sp"
         tools:text="@string/city_name" />
 
 </layout>
