--- a/app/src/main/res/layout/row_notifications.xml
+++ b/app/src/main/res/layout/row_notifications.xml
@@ -68,7 +68,7 @@
                         android:paddingHorizontal="@dimen/_10sdp"
                         android:text="@{data.sender}"
                         android:textColor="@color/grey"
-                        android:textSize="@dimen/_14ssp"
+                        android:textSize="16sp"
                         tools:text="Sender" />
 
                     <androidx.appcompat.widget.AppCompatTextView
@@ -79,7 +79,7 @@
                         android:paddingHorizontal="@dimen/_10sdp"
                         android:text="@{data.dateTime}"
                         android:textColor="@color/grey"
-                        android:textSize="@dimen/_14ssp"
+                        android:textSize="16sp"
                         tools:text="Time" />
 
                 </LinearLayout>
@@ -92,7 +92,7 @@
                     android:paddingHorizontal="@dimen/_10sdp"
                     android:text="@{data.title}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp"
+                    android:textSize="16sp"
                     tools:text="Dhaba List" />
             </LinearLayout>
         </LinearLayout>
