--- a/app/src/main/res/layout/row_shop_list.xml
+++ b/app/src/main/res/layout/row_shop_list.xml
@@ -52,7 +52,7 @@
                     android:paddingStart="@dimen/_4sdp"
                     android:text="@{data.name}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp"
+                    android:textSize="16sp"
                     tools:text="Name" />
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -65,7 +65,7 @@
                     android:padding="@dimen/_4sdp"
                     android:text="@{data.points + ` Points`}"
                     android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/_12ssp"
+                    android:textSize="14sp"
                     tools:text="Contact Number" />
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -77,7 +77,7 @@
                     android:padding="@dimen/_4sdp"
                     android:text="@{data.requiredPoints + ` more points required`}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_12ssp"
+                    android:textSize="14sp"
                     android:visibility="@{(data.requiredPoints == 0) ? View.GONE : View.VISIBLE}"
                     tools:text="Contact Number" />
             </LinearLayout>
