--- a/app/src/main/res/layout/row_user_list.xml
+++ b/app/src/main/res/layout/row_user_list.xml
@@ -58,7 +58,7 @@
                     android:orientation="vertical"
                     android:text="@{model.ownerName}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_12ssp"
+                    android:textSize="16sp"
                     android:visibility="@{model.ownerName.trim().isEmpty() ? View.GONE : View.VISIBLE}" />
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -70,7 +70,7 @@
                     android:orientation="vertical"
                     android:text="@{model.email}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_10ssp" />
+                    android:textSize="13sp" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvMobile"
@@ -81,7 +81,7 @@
                     android:orientation="vertical"
                     android:text="@{`+`+model.mobilePrefix + model.mobile}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_10ssp" />
+                    android:textSize="12sp" />
             </LinearLayout>
 
             <ImageView
