--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -104,4 +104,16 @@
         <item name="android:windowExitAnimation">@anim/slide_out_up</item>
     </style>
 
+    <style name="TextLabel" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:textColorHint">@color/text_gray</item>
+        <item name="android:textSize">16sp</item>
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+        <item name="colorAccent">@color/text_gray</item>
+        <item name="colorControlNormal">@color/text_gray</item>
+        <item name="colorControlActivated">@color/text_gray</item>
+        <item name="boxStrokeColor">@color/input_selector</item>
+        <item name="boxStrokeWidth">0.7dp</item>
+    </style>
+
 </resources>
